app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  name: lab-financial
spec:
  finalizers:
  - kubernetes
