app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: httpd
  name: httpd
  namespace: lab-financial
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: httpd
